test/tests/nek_errors/invalid_transfer_pp/cube.par
[OCCA]
  backend = CPU

[GENERAL]
  stopAt = numSteps
  numSteps = 10
  dt = 0.1
  polynomialOrder = 2
  checkpointControl = steps
  checkpointInterval = 10

[FLUID VELOCITY]
  solver = none

[FLUID PRESSURE]
